ToolboxCommand should return results (#107)
ToolboxCommando was meant as reusable, but in fact it was not, as it never returned (just logged) the results. There are couple of TODOs that needs to be sorted out, but now commands to return results.
 
Fixes #100